src/objects/Program__c.object
<CustomObject>
    <fields>
        <fullName>ProgramTTV__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ProgramTTV</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>mysql Id</inlineHelpText>
        <label>Record ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>accepts_donations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts Donations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>accepts_enrollments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepts Enrollments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>allows_gifting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allows Gifting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>donation_context__c</fullName>
        <label>Donation Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>donation_percentage__c</fullName>
        <label>Donation Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>donation_type__c</fullName>
        <label>Donation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>category__c</columns>
        <columns>ProgramTTV__c</columns>
        <columns>accepts_donations__c</columns>
        <columns>allows_gifting__c</columns>
        <columns>accepts_enrollments__c</columns>
        <columns>donation_percentage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>